--- a/notebooks/202208_spiral_generate_partial_metadata_to_csv.ipynb
+++ b/notebooks/202208_spiral_generate_partial_metadata_to_csv.ipynb
@@ -15,16 +15,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in /usr/local/lib/python3.8/dist-packages (3.0.10)\n",
-      "Requirement already satisfied: et-xmlfile in /usr/local/lib/python3.8/dist-packages (from openpyxl) (1.1.0)\n",
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.0.10-py2.py3-none-any.whl (242 kB)\n",
+      "\u001b[K     |████████████████████████████████| 242 kB 1.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting et-xmlfile\n",
+      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.0.10\n",
       "\u001b[33mWARNING: You are using pip version 20.2.4; however, version 22.2.2 is available.\n",
       "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -36,15 +48,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -53,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-3-ecc15805103f>:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "<ipython-input-4-ecc15805103f>:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  filtered_ki_df = ki_df.iloc[:,:6].drop('MoCA',1)\n"
      ]
     },
@@ -382,7 +387,7 @@
        "T077                C104      no        1964.0    F   NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -952,7 +957,7 @@
        "T029               True  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -976,7 +981,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-f5cf5564c574>:6: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "<ipython-input-6-f5cf5564c574>:6: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  metadata = metadata.drop('registro tableta',1)\n"
      ]
     },
@@ -1790,7 +1795,7 @@
        "control7      no             0  NaN    0  2015  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
