--- a/notebooks/202208_spiral_just_reading_using_metadata_csv.ipynb
+++ b/notebooks/202208_spiral_just_reading_using_metadata_csv.ipynb
@@ -416,6 +416,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 2, 2, 2, 2, 0, 1,\n",
+       "       2, 2, 0, 0, 1, 1, 1, 0, 1, 1, 1, 2, 2, 1, 0, 2, 2, 2, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadf.level.values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
