--- a/notebooks/202208_spiral_rd_train_test_split_to_hdf.ipynb
+++ b/notebooks/202208_spiral_rd_train_test_split_to_hdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,26 @@
     "import pandas as pd\n",
     "from os import path\n",
     "\n",
+    "import config\n",
+    "\n",
     "mpl.rcParams['figure.figsize'] = [30.0, 15.0]\n",
     "HDFStore=pd.HDFStore\n",
     "\n",
+    "num_coefficients=10\n",
+    "seed=config.seed\n",
+    "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading data parameters\n",
+    "root_path=\"data/elekin/data\"\n",
+    "hw_results_path= \"/data/elekin/data/results/handwriting\""
    ]
   },
   {
@@ -28,44 +44,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "origin\tresults\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls /data/elekin/data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loading data parameters\n",
-    "num_coefficients=17\n",
-    "root_path=\"data/elekin/data\"\n",
-    "hw_results_path= \"/data/elekin/data/results/handwriting\"\n",
-    "seed=38"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data/elekin/data/results/handwriting/archimedean-17.h5\n",
-      "/data/elekin/data/results/handwriting/archimedean-17-splits.h5\n"
+      "/data/elekin/data/results/handwriting/archimedean-10.h5\n",
+      "/data/elekin/data/results/handwriting/archimedean-10-splits.h5\n"
      ]
     }
    ],
    "source": [
     "#Load data from hdf5 file\n",
-    "rdo_root_path = path.join(root_path,hw_results_path)\n",
+    "rdo_root_path = path.join(config.root_path,config.hw_results_path)\n",
     "h5file = path.join(rdo_root_path, \"archimedean-\")\n",
     "h5filename = h5file + str(num_coefficients) + \".h5\"\n",
     "print(h5filename)\n",
@@ -78,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/data/elekin/data/results/handwriting/archimedean-17.h5'"
+       "'/data/elekin/data/results/handwriting/archimedean-10.h5'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,9 +84,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/source/dataset', '/source/labels', '/results/radius/r']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdf.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'No object named results/residues/rd in the file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Load timeseries and labels\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m raw_df \u001b[38;5;241m=\u001b[39m \u001b[43mhdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mresults/residues/rd\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mT\n\u001b[1;32m      3\u001b[0m raw_labels_df \u001b[38;5;241m=\u001b[39m hdf\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msource/labels\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m raw_dataset \u001b[38;5;241m=\u001b[39m raw_df\u001b[38;5;241m.\u001b[39mjoin(raw_labels_df)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/pytables.py:608\u001b[0m, in \u001b[0;36mHDFStore.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    607\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key: \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m--> 608\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/pytables.py:799\u001b[0m, in \u001b[0;36mHDFStore.get\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    797\u001b[0m group \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_node(key)\n\u001b[1;32m    798\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m group \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 799\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo object named \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m in the file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    800\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_read_group(group)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'No object named results/residues/rd in the file'"
+     ]
+    }
+   ],
    "source": [
     "#Load timeseries and labels\n",
     "raw_df = hdf['results/residues/rd'].T\n",
