--- a/notebooks/202208_spiral_rd_dl_et_classification_fcnn_acc93-tf.dataset.ipynb
+++ b/notebooks/202208_spiral_rd_dl_et_classification_fcnn_acc93-tf.dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,15 @@
     "HDFStore=pd.HDFStore\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "#adding local modules\n",
+    "import sys\n",
+    "module_path = path.abspath(path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "from preprocess.biodarw_feature_extraction import extract_residues, extract_radio\n",
+    "from loaders.biodarw import load_arquimedes_dataset"
    ]
   },
   {
