automate different experiments

--- a/notebooks/202208_spiral_extracted_features_exploration-hdf5-DEPRECATED.ipynb
+++ b/notebooks/202208_spiral_extracted_features_exploration-hdf5-DEPRECATED.ipynb
@@ -71,8 +71,7 @@
     "root_path = \"/data/elekin/data\"\n",
     "rdo_root_path = path.join(root_path,\"results/handwriting\")\n",
     "h5file = path.join(rdo_root_path, \"archimedean-\")\n",
-    "h5filename = h5file + str(num_coeff) + \".h5\"\n",
-    "hdf = HDFStore(h5filename)"
+    "h5filename = h5file + str(num_coeff) + \".h5\""
    ]
   },
   {
