new experiments registered

--- a/notebooks/202208_spiral_r_rd_correlation-rolling-multilevel.ipynb
+++ b/notebooks/202208_spiral_r_rd_correlation-rolling-multilevel.ipynb
@@ -1448,7 +1448,7 @@
     }
    ],
    "source": [
-    "_=df_pca.plot.scatter(x=\"component1\", y=\"component2\", c=\"labels\", cmap=\"viridis\")"
+    "_=df_pca.plot.scatter(x=\"component1\", y=\"component2\", c=\"labels\", cmap=\"viridis\", colorbar=False)"
    ]
   },
   {
