--- a/notebooks/202208_spiral_raw_data_windowing_lstm_classification.ipynb
+++ b/notebooks/202208_spiral_raw_data_windowing_lstm_classification.ipynb
@@ -11,6 +11,7 @@
     "import os\n",
     "import sys\n",
     "\n",
+    "from utils import *\n",
     "\n",
     "#plotting\n",
     "from matplotlib import pyplot as plt\n",
@@ -58,19 +59,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(results_path,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbiodarw_\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(day)))\u001b[38;5;241m.\u001b[39mset_index(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubject_id\u001b[39m\u001b[38;5;124m'\u001b[39m)[features]\n\u001b[1;32m      2\u001b[0m df\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>pen_up</th>\n",
+       "      <th>pressure</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>subject_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C103_1</th>\n",
+       "      <td>5250</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C08</th>\n",
+       "      <td>4573</td>\n",
+       "      <td>2627</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T002_1</th>\n",
+       "      <td>4769</td>\n",
+       "      <td>3361</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C101_1</th>\n",
+       "      <td>4924</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C04_1</th>\n",
+       "      <td>4448</td>\n",
+       "      <td>2469</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1271</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               x     y  pen_up  pressure\n",
+       "subject_id                              \n",
+       "C103_1      5250  2700       0         0\n",
+       "C08         4573  2627       1      1167\n",
+       "T002_1      4769  3361       1      2048\n",
+       "C101_1      4924  2544       1      1538\n",
+       "C04_1       4448  2469       1      1271"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -96,6 +174,24 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_w = make_sliding(df[['x','y']], N=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_w.shape"
    ]
   },
   {
@@ -601,18 +697,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
